--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,15 @@
 @import "tailwindcss";
 
-input{
-    padding: 10px 12px;
-    border: 1px solid gray;
-    border-radius: 10px;
+input {
+  padding: 10px 12px;
+  border: 1px solid gray;
+  border-radius: 10px;
 }
 
-button{
+/* button{
     padding: 10px 12px;
     border: 2px solid rgb(165, 107, 0);
     border-radius: 10px;
     cursor: pointer;
     background-color: orange;
-}
+} */
